5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1836_2603.log
== TEST (2019-07-01 14:22:41) 
-- CODE:
from numpy import*
from numpy.linalg import*

a= array(eval(input("digite sua matriz")))

vetor= sorted(a,reverse=True)

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:23:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

a= array(eval(input("digite sua matriz")))
a= sorted(a,reverse=True)

print(vetor)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 14:29:26) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("aa")))
v= zeros(shape(m)[1],dtype=int)
for i in range(4)
	for j in range(4):
		v[j]=m[j,i]
		v= sorted(v, reverse=True)
		for k in range(4):
			m[k,i]=v[k]
print(m)
-- EXECUTION TIME:
0.658244
-- ERROR:
  File "/home/codebench/codes/1836/2603/main.py", line 6
    for i in range(4)
                    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:29:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("aa")))
v= zeros(shape(m)[1],dtype=int)
for i in range(4)
	for j in range(4):
		v[j]=m[j,i]
		v= sorted(v, reverse=True)
		for k in range(4):
			m[k,i]=v[k]
print(m)
-- ERROR:
File "XXXX", line 6
    for i in range(4)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 14:29:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("aa")))
v= zeros(shape(m)[1],dtype=int)
for i in range(4):
	for j in range(4):
		v[j]=m[j,i]
		v= sorted(v, reverse=True)
		for k in range(4):
			m[k,i]=v[k]
print(m)
-- EXECUTION TIME:
1.09821
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[1 1 1 1]
 [0 0 0 0]
 [0 0 0 0]
 [0 0 0 0]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 1 1 3]
 [0 0 0 0]
 [0 0 0 0]
 [0 0 0 0]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 14:29:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("aa")))
v= zeros(shape(m)[1],dtype=int)
for i in range(4):
	for j in range(4):
		v[j]=m[j,i]
		v= sorted(v, reverse=True)
		for k in range(4):
			m[k,i]=v[k]
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 14:30:55) 
-- CODE:
from numpy import*
from numpy.linalg import*

m= array(eval(input("aa")))
v= zeros(shape(m)[1],dtype=int)
for i in range(4):
	for j in range(4):
		v[j]=m[j,i]
	v= sorted(v, reverse=True)
	for k in range(4):
		m[k,i]=v[k]
print(m)
-- EXECUTION TIME:
1.19384
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
